--- a/Challenge 010/Challenge 10.ipynb
+++ b/Challenge 010/Challenge 10.ipynb
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\Luisa Bez\\Documents\\Python Scripts\\Alteryx challenges\\challenge_10_input.csv\", parse_dates=[\"TIMESTAMP\", \"Time_Now\"])\n",
+    "df = pd.read_csv(".Challenge 010/challenge_10_input.csv", parse_dates=[\"TIMESTAMP\", \"Time_Now\"])\n",
     "df.head()"
    ]
   },
