--- a/Challenge 007/Challenge 7.ipynb
+++ b/Challenge 007/Challenge 7.ipynb
@@ -1,18 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 108,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import requests\n",
+    "# Challenge #7: Download Data and Parse JSON\n",
+    "\n",
+    "For the seventh challenge let’s look at downloading data with an API and parsing that data from JSON into a usable format.\n",
+    "\n",
+    "The data we will use comes from Quandl. The Quandl site offers access to several million financial, economic and social datasets. Data is indexed from multiple sources allowing users to find and download in various formats. All Quandl's data are accessible via an API.\n",
+    "\n",
+    " \n",
+    "\n",
+    "For this example the response from these APIs is JSON. Our user is trying to get aggregated Annual Outbound Tourism Statistics for the US dating back to 1995. The Text Input contains the URL for the API request. Your goal is to parse the response."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,25 +360,23 @@
     "    goal = []\n",
     "    r = requests.get(url).json()\n",
     "    for item in r['dataset']['data']:\n",
-    "        goal.append(item[:9])\n",
-    "    df = pd.DataFrame(goal, columns=[\"Date\",\n",
-    "                                     \"Arrivals - Thousands (TF)\",\n",
-    "                                     \"Tourism expenditure in the country - US$ Mn (IMF)\",\n",
-    "                                     \"Tourism expenditure in the country - US$ Mn (IMF) - Travel - US$ Mn (IMF)\",\n",
-    "                                     \"Tourism expenditure in the country - US$ Mn (IMF) - Passenger transport - US$ Mn (IMF)\",\n",
-    "                                     \"Departures - Thousands (TF)\",\n",
-    "                                     \"Tourism expenditure in other countries - US$ Mn (IMF)\",\n",
-    "                                     \"Tourism expenditure in other countries - US$ Mn (IMF) - Travel - US$ Mn (IMF)\",\n",
-    "                                     \"Tourism expenditure in other countries - US$ Mn (IMF) - Passenger transport - US$ Mn (IMF)\"\n",
-    "                                    ])\n",
+    "        goal.append(item)\n",
+    "    df = pd.DataFrame(goal, columns=r['dataset']['column_names'])\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['2017-12-31', 76941.0, 251361.0, 210748.0, 40613.0, 87703.0, 173919.0, 135023.0, 38896.0], ['2016-12-31', 76407.0, 246172.0, 206901.0, 39271.0, 80226.0, 160937.0, 123569.0, 37368.0], ['2015-12-31', 77774.0, 249183.0, 206936.0, 42247.0, 74191.0, 150044.0, 114550.0, 35494.0], ['2014-12-31', 75022.0, 235990.0, 191919.0, 44071.0, 68185.0, 140558.0, 105668.0, 34890.0], ['2013-12-31', 69995.0, 218496.0, 177483.0, 41013.0, 61344.0, 130148.0, 98119.0, 32029.0], ['2012-12-31', 66657.0, 200997.0, 161633.0, 39364.0, 60697.0, 129902.0, 100337.0, 29565.0], ['2011-12-31', 62821.0, 187629.0, 150866.0, 36763.0, 59209.0, 116448.0, 89701.0, 26747.0], ['2010-12-31', 60010.0, 167996.0, 137010.0, 30986.0, 61061.0, 110049.0, 86623.0, 23426.0], ['2009-12-31', 55103.0, 146002.0, 119900.0, 26102.0, 62130.0, 102953.0, 81421.0, 21532.0], ['2008-12-31', 58007.0, 164721.0, 133765.0, 30956.0, 63653.0, 119838.0, 92546.0, 27292.0], ['2007-12-31', 56135.0, 144223.0, 119037.0, 25186.0, 64049.0, 112788.0, 89235.0, 23553.0], ['2006-12-31', 50977.0, 126778.0, 105141.0, 21637.0, 63663.0, 106848.0, 84206.0, 22642.0], ['2005-12-31', 49206.0, 122077.0, 101469.0, 20608.0, 63503.0, 101421.0, 79990.0, 21431.0], ['2004-12-31', 46086.0, 115689.0, 97758.0, 17931.0, 61809.0, 94764.0, 71034.0, 23730.0], ['2003-12-31', 41218.0, 101535.0, 86444.0, 15091.0, 56250.0, 82091.0, 61966.0, 20125.0], ['2002-12-31', 43581.0, 104427.0, 88136.0, 16291.0, 58066.0, 81860.0, 62671.0, 19189.0], ['2001-12-31', 46927.0, 109103.0, 91922.0, 17181.0, 59442.0, 85610.0, 63689.0, 21921.0], ['2000-12-31', 51238.0, 120912.0, 100716.0, 20196.0, 61327.0, 91473.0, 67860.0, 23613.0], ['1999-12-31', 48509.0, 111475.0, 92050.0, 19425.0, 57222.0, 82513.0, 61567.0, 20946.0], ['1998-12-31', 46377.0, 105095.0, 85001.0, 20094.0, 55696.0, 78423.0, 58451.0, 19972.0], ['1997-12-31', 47767.0, 107047.0, 86175.0, 20872.0, 53229.0, 71948.0, 53808.0, 18140.0], ['1996-12-31', 46489.0, 102196.0, 81772.0, 20424.0, 52999.0, 65477.0, 49672.0, 15805.0], ['1995-12-31', 43318.0, 93743.0, 74834.0, 18909.0, 51285.0, 61042.0, 46379.0, 14663.0]]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -879,7 +892,7 @@
        "22                                                                                     14663.0  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
