--- a/Challenge 224 - Mushroom for Improvement/Challenge 224.ipynb
+++ b/Challenge 224 - Mushroom for Improvement/Challenge 224.ipynb
@@ -322,7 +322,7 @@
     }
    ],
    "source": [
-    "df_attributes = pd.read_csv(r'C:\\Users\\bezlui\\Documents\\Python\\Alteryx challenges\\Challenge 224 - Mushroom for Improvement\\challenge_224_input2.csv')\n",
+    "df_attributes = pd.read_csv('./challenge_224_input2.csv')\n",
     "df_attributes.head(5)"
    ]
   },
